<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:orderInCategory="100"
        android:title="@string/my_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grades"
        android:icon="@drawable/ic_grid_on_black_24dp"
        android:orderInCategory="100"
        android:title="@string/grade"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_timetable"
        android:icon="@drawable/time"
        android:orderInCategory="100"
        android:title="@string/timetable"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_message"
        android:icon="@drawable/ic_message_black_24dp"
        android:orderInCategory="100"
        android:title="@string/message"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scan_id"
        android:icon="@drawable/logout"
        android:orderInCategory="100"
        android:title="@string/scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />


</menu>
