<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Course1Activity"
    android:background="#ffebee"
    tools:showIn="@layout/app_bar_course1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/city_unity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/e_learning"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#701f28"
            android:textAlignment="center" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:background="#ffffff"
        android:gravity="center">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course1"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:textColor="#701f28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dear"
            android:textColor="#701f28" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_info"
            android:textColor="#701f28"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_info2"
            android:textColor="#701f28"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_info3"
            android:textColor="#701f28"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_info4"
            android:textColor="#701f28"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_info5"
            android:textColor="#701f28"
            android:layout_marginBottom="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_info6"
            android:textColor="#701f28"
            android:layout_marginBottom="5dp" />


    </LinearLayout>

</LinearLayout>

