<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EduActivity"
    android:background="#ffebee"
    tools:showIn="@layout/app_bar_edu"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/city_unity" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="@string/edu"
            android:textAlignment="center"
            android:textColor="#701f28"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:text="@string/access"
        android:textAlignment="center"
        android:textColor="#701f28"
        android:textSize="14sp"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="#ffebee"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/e_learn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_horizontal"
                android:src="@drawable/accountxl" />

            <TextView
                android:id="@+id/learn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/e_learn"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:text="@string/e_learn" />

            <TextView
                android:id="@+id/online_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/learn"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/online"
                android:layout_marginBottom="8dp"/>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_below="@id/online_text"
               android:gravity="center_horizontal">

               <Button
                   android:layout_width="150dp"
                   android:layout_height="wrap_content"
                   android:text="@string/visit"
                   android:textColor="#ffffff"
                   android:layout_marginRight="8dp"
                   android:textStyle="bold"
                   android:background="#701f28"/>

               <Button
                   android:layout_width="150dp"
                   android:layout_height="wrap_content"
                   android:text="@string/more"
                   android:textColor="#ffffff"
                   android:textStyle="bold"
                   android:background="#701f28"/>
           </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="#ffebee"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/webb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foregroundGravity="center_horizontal"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/webbb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/webb"
                android:foregroundGravity="center_horizontal"
                android:gravity="center"
                android:text="@string/web_mail" />

            <TextView
                android:id="@+id/webbbb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_below="@id/webbb"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/web" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/webbbb"
                android:gravity="center_horizontal">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/visit"
                    android:textColor="#ffffff"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"
                    android:background="#701f28"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:textColor="#ffffff"
                    android:layout_marginRight="8dp"
                    android:textStyle="bold"
                    android:background="#701f28"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>